apps/production/media/ombi/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ombi

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ombi.local.hejsan.xyz`)
      kind: Rule
      services:
        - name: ombi
          port: http

  tls:
    secretName: local-hejsan-xyz-tls
    namespace: traefik
